--- a/index.html
+++ b/index.html
@@ -21,9 +21,16 @@
             </div>
             <button id="like" class="button light-color"><i class="bi bi-heart"></i></button>
         </div>
-        <div class="progress-bar">
-            <div class="current-progress"></div>
+        <div class="progress-container">
+            <div class="progress-bar">
+                <div class="current-progress"></div>
+            </div>
+            <div id="time-box">
+                <div id="song-time">00:00</div>
+                <div id="total-time">00:00</div>
+            </div>
         </div>
+        
         <div class="button-container">
             <button id="shuffle" class="button"><i class="bi bi-shuffle"></i></button>
             <button id="previous" class="button button-navigate"><i class="bi bi-skip-start-fill"></i></button>
